--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="index.css" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-  <title>Document</title>
+  <title>FINOR</title>
 </head>
 
 <body>
@@ -30,10 +31,10 @@
   <section class="header">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-3 col-sm-12 text-center text-md-start">
+        <div class="col-lg-6 col-md-3 col-sm-12 text-center text-md-start" data-aos="fade-right" data-aos-duration="2000">
           <img src="images/Finor.JPG" class="finor-img">
         </div>
-        <div
+        <div data-aos="fade-left" data-aos-duration="2000"
           class="col-lg-2 col-md-3 col-sm-6 col-12 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
           <div class="call-icon">
             <i class="bi bi-telephone-fill"></i>
@@ -43,7 +44,7 @@
             <span class="email"><a href="www.gmail.com">info@gmail.com</a></span>
           </div>
         </div>
-        <div
+        <div data-aos="fade-left" data-aos-duration="2000"
           class="col-lg-2 col-md-3 col-sm-6 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
           <div class="email-icon">
             <i class="bi bi-envelope-arrow-down-fill"></i>
@@ -52,7 +53,7 @@
             <span class="address">150 Son Lane Area, Angeles, CA 9017</span>
           </div>
         </div>
-        <div
+        <div data-aos="fade-left" data-aos-duration="2000"
           class="col-lg-2 col-md-3 col-sm-12 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
           <div class="search-icon">
             <i class="bi bi-search" style="color: #fff;"></i>
@@ -67,7 +68,7 @@
       </div>
     </div>
   </section>
-  <section class="nevbar-sec">
+  <section class="nevbar-sec" data-aos="zoom-in" data-aos-duration="1500">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 nav-top"></div>
@@ -86,18 +87,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link n-link active" href="#" data-i18n="home" id="home-link"><i class="bi bi-house-fill"></i>
+                  <a class="nav-link n-link active" href="#" data-i18n="home" id="home-link"><i
+                      class="bi bi-house-fill"></i>
                     Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link n-link" id="about-link" data-i18n="about" href="#"><i class="bi bi-file-person-fill"></i>
+                  <a class="nav-link n-link" id="about-link" data-i18n="about" href="#"><i
+                      class="bi bi-file-person-fill"></i>
                     About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link n-link" id="blog-link" data-i18n="blog" href="#"><i class="bi bi-substack"></i> Blog</a>
+                  <a class="nav-link n-link" id="blog-link" data-i18n="blog" href="#"><i class="bi bi-substack"></i>
+                    Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link n-link" id="service-link" data-i18n="service" href="#"><i class="bi bi-gear-fill"></i>
+                  <a class="nav-link n-link" id="service-link" data-i18n="service" href="#"><i
+                      class="bi bi-gear-fill"></i>
                     Service</a>
                 </li>
                 <li class="nav-item">
@@ -199,7 +204,7 @@
   <section class="cards">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-4 p-3">
+        <div class="col-12 col-md-4 p-3" data-aos="flip-left" data-aos-duration="2000">
           <div class="card1 bg-md-white bg-light d-flex justify-content-center">
             <div class="card-content">
               <p>Growth of Industriel</p>
@@ -208,7 +213,7 @@
             <img class="card-image" src="images/building.JPG">
           </div>
         </div>
-        <div class="col-12 col-md-4 p-3">
+        <div class="col-12 col-md-4 p-3" data-aos="zoom-in" data-aos-duration="2000">
           <div class="card2 bg-md-white bg-light d-flex justify-content-center">
             <div class="card-content">
               <p>Growth of Industriel</p>
@@ -217,7 +222,7 @@
             <img class="card-image" src="images/building.JPG">
           </div>
         </div>
-        <div class="col-12 col-md-4 p-3">
+        <div class="col-12 col-md-4 p-3" data-aos="flip-right" data-aos-duration="2000">
           <div class="card3 bg-md-white bg-light d-flex justify-content-center">
             <div class="card-content">
               <p>Growth of Industriel</p>
@@ -239,7 +244,7 @@
           <p class="company-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
             accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
         </div>
-        <div class="col-lg-4 mt-5 text-center text-sm-start">
+        <div class="col-lg-4 mt-5 text-center text-sm-start" data-aos="fade-left" data-aos-duration="3000">
           <img src="images/aboutus-img.PNG" class="w-100" alt="">
           <p class="about-company mt-4">ABOUT US</p>
           <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
@@ -247,7 +252,7 @@
           <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
             accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
         </div>
-        <div class="col-lg-4 mt-5 ps-xl-5">
+        <div class="col-lg-4 mt-5 ps-xl-5" data-aos="zoom-in" data-aos-duration="3000">
           <div class="d-flex">
             <div class="book-icon">
               <i class="bi bi-journal-text fs-1"></i>
@@ -279,14 +284,14 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-5 text-center text-sm-start">
+        <div class="col-lg-4 mt-5 text-center text-sm-start" data-aos="fade-right" data-aos-duration="3000">
           <img src="images/ship.PNG" class="w-100" alt="">
           <img class="mt-5 w-100" src="images/ship.PNG" alt="">
         </div>
       </div>
     </div>
   </section>
-  <section id="blog" class="blog-sec">
+  <section id="blog" class="blog-sec" data-aos="zoom-in" data-aos-duration="2000">
     <div class="container">
       <div class="row">
         <div class="col-12 blog-img">
@@ -295,7 +300,7 @@
       </div>
     </div>
   </section>
-  <section id="service" class="service-sec">
+  <section id="service" class="service-sec" data-aos="zoom-in" data-aos-duration="2000">
     <div class="container">
       <div class="row">
         <div class="col-12 pb-5 pt-5">
@@ -401,10 +406,14 @@
   </a>
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
